--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
     vertical-align: baseline;
-    box-sizing: border-boxnp;
+    box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -43,24 +43,123 @@ table {
 	border-spacing: 0;
 }
 
+a{
+    text-decoration: none;
+    
+}
+
 /* --------------------------- */
 
 @font-face {
-    font-family: CalSans;
+    font-family: "CalSans";
     font-display: swap;
     font-weight: 400;
-    font-style: noral;
+    font-style: normal;
     src: url(../fonts/CalSans-SemiBold.woff2) format(woff2), url(../fonts/CalSans-SemiBold.woff) format(woff);
 }
 
-html body {
+html, body {
     height: 100%;
     min-width: 320px;
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
-    color: 666;
+    color: #666;
+    line-height: 1;
+
+
+}
+
+.wrapper {
+    overflow: hidden;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+[class*="__container"]{
+    max-width: 1230px;
+    margin:0 auto;
+    padding: 0 15px;
+}
+
+.header__container {
+    min-height: 160px;
+    display: inline-flex;
+    align-items: center;
+    
+}
+
+.header__logo {
+    margin-right: 131px;
+}
+
+.header__logo > span {
+    font-family: "CalSans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 29px;
+
+    color: #121212;
+}
+
+.menu__list {
+    display: inline-flex;
+    column-gap: 56px;
+}
+
+.menu__item:hover {
+    text-decoration: underline;
+
+}
+
+
+
+/* ------------------------ */
+.main{
+     flex:1 1 auto
+}
+
+.main__container {
+}
+.main__content-box {
+    margin: 235px 0 220px;
+    width: 469px;
+}
+.content-box {
+}
+.content-box__title {
+    font-family: "CalSans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 56px;
+    line-height: 67px;
+
+    color: #121212;
+}
+.content-box__text {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+
+    color: #666666;
+
+  
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.content-box__download {
+}
+.download {
+}
+.download__btn {
+}
+.btn {
+}
+.download__app {
 }
 
 
