--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,11 @@ a{
 /* --------------------------- */
 
 @font-face {
-    font-family: "CalSans";
+    font-family: CalSans;
     font-display: swap;
     font-weight: 400;
     font-style: normal;
-    src: url(../fonts/CalSans-SemiBold.woff2) format(woff2), url(../fonts/CalSans-SemiBold.woff) format(woff);
+    src: url("../fonts/CalSans-SemiBold.woff2") format("woff2"), url("../fonts/CalSans-SemiBold.woff") format("woff");
 }
 
 html, body {
@@ -135,31 +135,48 @@ html, body {
     font-style: normal;
     font-weight: 600;
     font-size: 56px;
-    line-height: 67px;
 
     color: #121212;
+
+    margin-bottom: 16px;
+}
+.content-box__title>span {
+    color:#FF6428;
 }
 .content-box__text {
-    font-family: 'Poppins';
-    font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 24px;
-
-    color: #666666;
-
-  
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    margin-bottom: 33px;
 }
 .content-box__download {
 }
-.download {
+.actions {
+    display: inline-flex;
+    align-items: center;
 }
-.download__btn {
+.actions__btn {
+    margin-right: 40px;
 }
 .btn {
+    display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 18px 48px;
+gap: 10px;
+
+width: 192px;
+height: 60px;
+
+background: #FF6428;
+border-radius: 40px;
+color:#fff;
+font-weight: 600;
 }
-.download__app {
+.actions__icon:not(:last-child) {
+    margin-right: 27px;
 }
 
 
